# openclaw-needs-solution-designer-by

./: .gitignore  Cargo.toml  HOW-TO-USE.md  HOW-TO-USE.zh-CN.md  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  publish-checklist.md
crates/spg-core/: Cargo.toml
crates/spg-core/data/: entity_assets.json  sample_raw_items.jsonl
crates/spg-core/src/: assets.rs  io_utils.rs  lib.rs  main.rs  pipeline.rs  storage.rs  text_utils.rs
crates/spg-core/tests/: pipeline_tests.rs
crates/spg-web/: Cargo.toml
crates/spg-web/assets/: app.css  galaxy.js  galaxy_v2.js  galaxy_wire.js  galaxy_wire_v2.js  setup.js
crates/spg-web/src/: galaxy.rs  lib.rs  main.rs  models.rs  secret_store.rs  store.rs  ui.rs  ui_v2.rs
crates/spg-web/tests/: web_tests.rs
data/: demo_snapshot_v0.1.0.json  demo_snapshot_v0.1.1.json  demo_snapshot_v0.1.2.json  entity_assets.json  sample_raw_items.jsonl
docs/: SPG_v2_设计方案.html  SPG_v3_API授权配置页.html  SPG_v3_星河布局与多API调度方案.html  index.html
examples/: client-needs-triage-v1-handoff.md  client-needs-triage-v1-handoff.zh-CN.md  customer-needs-reuse-first-example.md  customer-needs-reuse-first-example.zh-CN.md
openclaw-needs-solution-designer-by/: SKILL.md
openclaw-needs-solution-designer-by/agents/: openai.yaml
openclaw-needs-solution-designer-by/references/: checklists.md  samples.md
scripts/: launch_spg_web.ps1
src/: assets.rs  io_utils.rs  main.rs  models.rs  pipeline.rs  storage.rs  text_utils.rs
