[package]
name = "spg-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
unicode-normalization = "0.1"
url = "2"
