[package]
name = "spg-web"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm-siv = "0.11"
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros"] }
base64 = "0.22"
http = "1"
keyring = "3"
leptos = { version = "0.6", features = ["ssr"] }
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spg-core = { path = "../spg-core" }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
